# slots

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
include/: awarding.hpp  event_handler.hpp  game.hpp  graphics.hpp  reel.hpp  slot_machine.hpp  sound.hpp  spinning.hpp  state.hpp  struct.h  timer.hpp  waiting.hpp
src/: CMakeLists.txt  awarding.cpp  event_handler.cpp  game.cpp  graphics.cpp  main.cpp  reel.cpp  slot_machine.cpp  sound.cpp  spinning.cpp  timer.cpp  waiting.cpp
